[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"
default-run = "aoc2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nom = "7.1.1"